# Centralaizer-public

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup_and_run.sh
browser-extension/: README.md  background.js  content.js  manifest.json  toolbar.css
config/: settings.py
core/mcp/: server.py
core/memory/: engine.py  models.py  trust.py
core/privacy/: filter.py
core/storage/: database.py  graph_store.py  vector_store.py
docker/: entrypoint.sh
docs/: AGENT_INSTRUCTIONS.md  AGENT_SETUP.md
scripts/: recall_hook.py  seed_demo.py  session_hook.py  setup.sh
ui/: app.py
ui/static/css/: app.css
ui/static/js/: app.js
ui/templates/: base.html  index.html  memories.html  quarantine.html  skills.html
