[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "localmem"
version = "0.1.0"
description = "Local-first centralized memory hub for AI agents — MCP-compatible, zero cloud egress"
requires-python = ">=3.11"
dependencies = [
    # MCP server
    "fastmcp>=2.0",
    # Vector store (SQLite-backed, no server needed)
    "chromadb>=0.5",
    # Embeddings via Ollama HTTP API
    "ollama>=0.3",
    # Knowledge graph
    "networkx>=3.3",
    "duckdb>=1.0",
    # Privacy / NER
    "spacy>=3.7",
    # Memory manager scheduler
    "apscheduler>=3.10",
    # Web UI
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    # Utilities
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
localmem = "localmem.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
